test/functions/jplevyak/intent-5-error.good
intent-5-error.chpl:3: In function 'foo':
intent-5-error.chpl:4: error: Assigning to a constant expression
